--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
   },
   "dependencies": {
     "gatsby": "^2.21.37",
+    "gatsby-plugin-eslint": "^2.0.8",
+    "gatsby-plugin-react-helmet": "^3.3.2",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "^6.0.0"
   },
   "devDependencies": {
     "prettier": "2.0.5"
