--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.28",
     "gatsby": "^2.21.37",
+    "gatsby-plugin-emotion": "^4.3.2",
     "gatsby-plugin-eslint": "^2.0.8",
     "gatsby-plugin-react-helmet": "^3.3.2",
     "prop-types": "^15.7.2",
@@ -23,6 +25,7 @@
     "react-helmet": "^6.0.0"
   },
   "devDependencies": {
+    "eslint-config-jquery": "^3.0.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.20.2",
     "gatsby-alias-imports": "^1.0.4",
