--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
     "react-image-gallery": "^1.0.7",
-    "react-qr-code": "^1.0.2",
-    "yarn": "^1.22.4"
+    "react-qr-code": "^1.0.2"
   },
   "devDependencies": {
     "eslint-config-jquery": "^3.0.0",
