--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.20.2",
     "gatsby-alias-imports": "^1.0.4",
+    "gatsby-optional-chaining": "^1.0.1",
     "prettier": "2.0.5"
   },
   "repository": {
