--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@loadable/component": "^5.12.0",
     "add": "^2.0.6",
     "gatsby": "^2.21.37",
+    "clipboard-copy": "^4.0.1",
     "gatsby-plugin-emotion": "^4.3.2",
     "gatsby-plugin-eslint": "^2.0.8",
     "gatsby-plugin-react-helmet": "^3.3.2",
