--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "add": "^2.0.6",
     "gatsby": "^2.21.37",
     "clipboard-copy": "^4.0.1",
+    "emoji-mart": "^5.2.1",
+    "emoji-mart-picker": "^0.2.3",
     "gatsby-plugin-emotion": "^4.3.2",
     "gatsby-plugin-eslint": "^2.0.8",
     "gatsby-plugin-react-helmet": "^3.3.2",
